# GenAI-RAG-Text-Explorer

./: .dockerignore  .env.template  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: algorithm.txt  bfs.txt
src/: cli.py
src/controllers/: extract_information.py
src/core/: config.py
src/database/: connect.py
