[tool.poetry]
name = "rag_langchain_ollama"
version = "0.0.0"
description = "An implementation of RAG with Ollama Embeddings & Model (Mistral) over sample TXT files via Langchain wrapped as a Gradio Application"
authors = ["Supreeth Kunder <kundersupreeth@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.16"
gradio = "^4.43.0"
pymongo = {extras = ["srv"], version = "^4.8.0"}
requests = "^2.32.3"
pydantic = "^2.9.1"
pydantic-settings = "^2.4.0"
llama-index = "^0.11.8"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
app = "src.cli:run"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
